force-app/main/default/objects/Client_Session__c/Client_Session__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Service Entry</label>
    <nameField>
        <displayFormat>ServiceEntry-{0000}</displayFormat>
        <label>Service Entry #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>