force-app/main/default/objects/Client_Session__c/fields/Assessment_Name__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Name__c</fullName>
    <label>Assessment Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAM Assessment</fullName>
            </value>
            <value>
                <fullName>Job Skills Assessment</fullName>
            </value>
            <value>
                <fullName>Stability Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>