force-app/main/default/objects/Client_Session__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipName>Client_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>