force-app/main/default/objects/Client_Session__c/fields/Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Communication_Method__c</fullName>
    <label>Communication Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Person (Cara)</fullName>
            </value>
            <value>
                <fullName>In-Person (Out)</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>