force-app/main/default/objects/Client_Session__c/fields/Conviction_Type__c.field-meta.xml
<CustomField>
    <fullName>Conviction_Type__c</fullName>
    <inlineHelpText>Refers to convictions listed below.</inlineHelpText>
    <label>Conviction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self-Reported</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>