force-app/main/default/objects/Client_Session__c/fields/Create_Follow_up_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Follow_up_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEMO: Used in service entry</description>
    <label>Create Follow-up Task</label>
    <type>Checkbox</type>
</CustomField>