force-app/main/default/objects/Client_Session__c/fields/Created_by_Summary__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Summary__c</fullName>
    <formula>if (not (isblank (Legacy_Created_By_Access__c)), Legacy_Created_By_Access__c, CreatedBy.Full_Name__c)</formula>
    <inlineHelpText>If created through web form or imported from legacy system, displays original creator&apos;s name. Otherwise, displays name of Salesforce Evaluation record creator.</inlineHelpText>
    <label>Created by, Summary</label>
    <type>Text</type>
</CustomField>