force-app/main/default/objects/Client_Session__c/fields/Declining_Job_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declining_Job_Reason__c</fullName>
    <label>Declining Job Reason (If applicable):</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No skill match to required qualifications</fullName>
            </value>
            <value>
                <fullName>Pay too low</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Background barriers too strict</fullName>
            </value>
            <value>
                <fullName>Education Does Not Match</fullName>
            </value>
            <value>
                <fullName>SOE Concern</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>