force-app/main/default/objects/Client_Session__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>Client_Name__c + &apos; &apos; +  Case_Record__r.Name  + &apos; Session&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>