force-app/main/default/objects/Client_Session__c/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <label>Duration (Hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>