force-app/main/default/objects/Client_Session__c/fields/ECM_Service_Activity__c.field-meta.xml
<CustomField>
    <fullName>ECM_Service_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ECM Service Entry</label>
    <referenceTo>ECM_Service_Activity__c</referenceTo>
    <relationshipLabel>Service Entries</relationshipLabel>
    <relationshipName>Service_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>