force-app/main/default/objects/Client_Session__c/fields/Employment_Status_at_IDS_Visit__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status_at_IDS_Visit__c</fullName>
    <label>Employment Status at IDS Visit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>