force-app/main/default/objects/Client_Session__c/fields/ETO_Attempted_Contact_Value__c.field-meta.xml
<CustomField>
    <fullName>ETO_Attempted_Contact_Value__c</fullName>
    <label>ETO Attempted Contact Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attempted contact, left/sent message</fullName>
            </value>
            <value>
                <fullName>Attempted contact, could not leave/send message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>