force-app/main/default/objects/Client_Session__c/fields/ETO_Contact_Location_Method__c.field-meta.xml
<CustomField>
    <fullName>ETO_Contact_Location_Method__c</fullName>
    <label>ETO Contact Location / Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In person</fullName>
            </value>
            <value>
                <fullName>By phone</fullName>
            </value>
            <value>
                <fullName>By mail</fullName>
            </value>
            <value>
                <fullName>By e-mail</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>