force-app/main/default/objects/Client_Session__c/fields/ETO_Participant_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ETO_Participant_Identifier__c</fullName>
    <formula>Case_Record__r.Main_Client__r.ETO_Case_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETO Participant Identifier</label>
    <type>Text</type>
</CustomField>