force-app/main/default/objects/Client_Session__c/fields/ETO_Successful_Contact_Value__c.field-meta.xml
<CustomField>
    <fullName>ETO_Successful_Contact_Value__c</fullName>
    <label>ETO Successful Contact Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact with client</fullName>
            </value>
            <value>
                <fullName>Contact with employer</fullName>
            </value>
            <value>
                <fullName>Contact with service provider</fullName>
            </value>
            <value>
                <fullName>Contact with other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>