force-app/main/default/objects/Client_Session__c/fields/ETO_Successful_Contact_Value_v2__c.field-meta.xml
<CustomField>
    <fullName>ETO_Successful_Contact_Value_v2__c</fullName>
    <formula>if (Service_Entry_Name__c= &quot;COAT&quot; || Service_Entry_Name__c= &quot;Program Hold&quot; || Service_Entry_Name__c= &quot;Send Out Hold&quot; || Service_Entry_Name__c= &quot;Student Absence&quot; || Service_Entry_Name__c= &quot;Write-Up&quot; || (Service_Entry_Name__c= &quot;Conviction History&quot; &amp;&amp;  ispickval(Conviction_Type__c, &quot;Self-Reported&quot;)) || (Service_Entry_Name__c= &quot;IDS Visit&quot; &amp;&amp;  not(ispickval(Visit_Type__c, &quot;Supervisor Visit&quot;))), &quot;Contact with client&quot;, 

if ((Service_Entry_Name__c= &quot;Conviction History&quot; &amp;&amp; ispickval(Conviction_Type__c, &quot;Verified&quot;)), &quot;Contact with other&quot;, 

if (Service_Entry_Name__c= &quot;IDS Visit&quot;, &quot;Contact with employer&quot;, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETO Successful Contact Value v2</label>
    <type>Text</type>
</CustomField>