force-app/main/default/objects/Client_Session__c/fields/ETO_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>ETO_Time_Spent__c</fullName>
    <inlineHelpText>Minutes spent on interaction. CWF for ETO only.</inlineHelpText>
    <label>ETO Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>