force-app/main/default/objects/Client_Session__c/fields/Fighting_Open_Case__c.field-meta.xml
<CustomField>
    <fullName>Fighting_Open_Case__c</fullName>
    <label>Fighting Open Case?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>