force-app/main/default/objects/Client_Session__c/fields/If_yes_please_specify__c.field-meta.xml
<CustomField>
    <fullName>If_yes_please_specify__c</fullName>
    <label>If yes, please specify:</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fighting_Open_Case__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Felony</fullName>
            </value>
            <value>
                <fullName>Misdemeanor</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>