force-app/main/default/objects/Client_Session__c/fields/Incident_Observation__c.field-meta.xml
<CustomField>
    <fullName>Incident_Observation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident / Observation</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Service Entries</relationshipLabel>
    <relationshipName>Service_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>