force-app/main/default/objects/Client_Session__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <description>DEMO: Task instructions to appear in email template</description>
    <label>Instructions</label>
    <type>TextArea</type>
</CustomField>