force-app/main/default/objects/Client_Session__c/fields/Is_there_a_warrant_out_for_arrest__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_warrant_out_for_arrest__c</fullName>
    <label>Is there a warrant out for arrest?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>