force-app/main/default/objects/Client_Session__c/fields/Legacy_Client_ID_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Client_ID_Access__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>From Client table in legacy Access database</inlineHelpText>
    <label>Legacy Client ID (Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>