force-app/main/default/objects/Client_Session__c/fields/Legacy_Created_By_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Created_By_Access__c</fullName>
    <inlineHelpText>Legacy from Access or External from FormAssembly</inlineHelpText>
    <label>Created By, External Form or Legacy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>