force-app/main/default/objects/Client_Session__c/fields/Legacy_Supervisor_Name_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Supervisor_Name_Access__c</fullName>
    <label>Legacy Supervisor Name (Access)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>