force-app/main/default/objects/Client_Session__c/fields/Legacy_Supervisor_Visit_ID_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Supervisor_Visit_ID_Access__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>From Visits - Super table in legacy Access database</inlineHelpText>
    <label>Legacy Supervisor Visit ID (Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>