force-app/main/default/objects/Client_Session__c/fields/Mental_Health_Progress_Note__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Progress_Note__c</fullName>
    <label>Mental Health Progress Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>