force-app/main/default/objects/Client_Session__c/fields/New_Hire_Orientation__c.field-meta.xml
<CustomField>
    <fullName>New_Hire_Orientation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Hire Orientation</label>
    <type>Checkbox</type>
</CustomField>