force-app/main/default/objects/Client_Session__c/fields/Number_of_Services_Rendered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Services_Rendered__c</fullName>
    <label>Number of Services Rendered</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>