force-app/main/default/objects/Client_Session__c/fields/Outbound_Referral__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outbound Referral</label>
    <referenceTo>Outbound_Referral__c</referenceTo>
    <relationshipLabel>Service Entries</relationshipLabel>
    <relationshipName>Service_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>