force-app/main/default/objects/Client_Session__c/fields/Outbound_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Referral_Type__c</fullName>
    <formula>text(Outbound_Referral__r.Referral_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outbound Referral: Type</label>
    <type>Text</type>
</CustomField>