force-app/main/default/objects/Client_Session__c/fields/Placement_Announcement_Summary__c.field-meta.xml
<CustomField>
    <fullName>Placement_Announcement_Summary__c</fullName>
    <formula>text( Date__c ) &amp; &quot; | &quot; &amp; Client_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Announcement Summary</label>
    <type>Text</type>
</CustomField>