force-app/main/default/objects/Client_Session__c/fields/Position_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Position_Vertical__c</fullName>
    <inlineHelpText>Required when Progress Note Type is &quot;Send Out Sales Pitch&quot;</inlineHelpText>
    <label>Position Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrative Assistant</fullName>
                <label>Administrative</label>
            </value>
            <value>
                <fullName>Assembly Line Worker</fullName>
                <label>Assembly Line</label>
            </value>
            <value>
                <fullName>Bank Teller</fullName>
                <label>Banking</label>
            </value>
            <value>
                <fullName>Construction/Trade</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Driving</fullName>
            </value>
            <value>
                <fullName>Food Service Worker</fullName>
                <label>Food Service</label>
            </value>
            <value>
                <fullName>Certified Nursing Assistant (CNA)</fullName>
                <label>Healthcare</label>
            </value>
            <value>
                <fullName>Janitor</fullName>
                <label>Janitorial/Housekeeping</label>
            </value>
            <value>
                <fullName>Machine Operator</fullName>
                <label>Machine Operation</label>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Nonprofit/Education</fullName>
            </value>
            <value>
                <fullName>Office Clerk</fullName>
            </value>
            <value>
                <fullName>Security Guard</fullName>
                <label>Security</label>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Warehouse Worker</fullName>
                <label>Warehouse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>