force-app/main/default/objects/Client_Session__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <formula>Case_Record__r.Program__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program</label>
    <type>Text</type>
</CustomField>