force-app/main/default/objects/Client_Session__c/fields/Program_Site_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Site_Start_Date__c</fullName>
    <formula>text(Case_Record__r.Program_Site_Track__c) &amp; &quot; &quot; &amp; text(Case_Record__r.Program_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Site &amp; Start Date</label>
    <type>Text</type>
</CustomField>