force-app/main/default/objects/Client_Session__c/fields/Progress_Note_Short__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note_Short__c</fullName>
    <label>Progress Note (Short)</label>
    <type>TextArea</type>
</CustomField>