force-app/main/default/objects/Client_Session__c/fields/Progress_Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note_Type__c</fullName>
    <label>Progress Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cara Central</fullName>
            </value>
            <value>
                <fullName>Cleanslate</fullName>
            </value>
            <value>
                <fullName>Connects Supervisor Feedback</fullName>
            </value>
            <value>
                <fullName>Experience Sheet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Panel Review</fullName>
            </value>
            <value>
                <fullName>Placement Announcement</fullName>
            </value>
            <value>
                <fullName>Prove It Test Results</fullName>
            </value>
            <value>
                <fullName>Return to Job Search</fullName>
            </value>
            <value>
                <fullName>Wellness Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>