force-app/main/default/objects/Client_Session__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <formula>TEXT( Incident_Observation__r.Reason__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason</label>
    <type>Text</type>
</CustomField>