force-app/main/default/objects/Client_Session__c/fields/Referral_Category_Display__c.field-meta.xml
<CustomField>
    <fullName>Referral_Category_Display__c</fullName>
    <formula>IF(
ISBLANK(TEXT((Outbound_Referral__r.Referral_Category__c))),
&quot;None&quot;,
TEXT(Outbound_Referral__r.Referral_Category__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Category</label>
    <type>Text</type>
</CustomField>