force-app/main/default/objects/Client_Session__c/fields/Related_to_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Progress Note</relationshipLabel>
    <relationshipName>Service_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>