force-app/main/default/objects/Client_Session__c/fields/Related_to_Placement__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Service Entries</relationshipLabel>
    <relationshipName>Service_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>