force-app/main/default/objects/Client_Session__c/fields/RelatedJobOrder__c.field-meta.xml
<CustomField>
    <fullName>RelatedJobOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be used in the new Employment Service Job Meeting Service Entry.</description>
    <label>Related Job Order</label>
    <referenceTo>Job_Order__c</referenceTo>
    <relationshipLabel>Service Entries</relationshipLabel>
    <relationshipName>Service_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>