force-app/main/default/objects/Client_Session__c/fields/Send_Inactivation_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Inactivation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box to send Inactivation Email to Program Services.</inlineHelpText>
    <label>Send Inactivation Email</label>
    <type>Checkbox</type>
</CustomField>