force-app/main/default/objects/Client_Session__c/fields/Service_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Service_Created_By__c</fullName>
    <formula>if (Legacy_Created_By_Access__c= &quot;JEG&quot; || CreatedBy.Alias = &quot;JEG&quot;, &quot;z JEG&quot;,

if (not (isblank (Legacy_Created_By_Access__c)), Legacy_Created_By_Access__c,   CreatedBy.Alias ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Created By</label>
    <type>Text</type>
</CustomField>