force-app/main/default/objects/Client_Session__c/fields/Service_Entry_ID_18_Digits__c.field-meta.xml
<CustomField>
    <fullName>Service_Entry_ID_18_Digits__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Entry ID (18 Digits)</label>
    <type>Text</type>
</CustomField>