force-app/main/default/objects/Client_Session__c/fields/Service_Entry_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Entry_Name__c</fullName>
    <formula>if (contains (text(Progress_Note_Type__c), &quot;Imported&quot;), &quot;Imported Progress Note&quot;,
if (ispickval (Progress_Note_Type__c, &quot;IDS Visit&quot;), &quot;Imported IDS Visit&quot;, 

ECM_Service_Activity__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Entry Name</label>
    <type>Text</type>
</CustomField>