force-app/main/default/objects/Client_Session__c/fields/Services_Rendered__c.field-meta.xml
<CustomField>
    <fullName>Services_Rendered__c</fullName>
    <label>Services Rendered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>