force-app/main/default/objects/Client_Session__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <formula>DATEVALUE(Date_Time__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>