force-app/main/default/objects/Client_Session__c/fields/Session_Series_Create_Event__c.field-meta.xml
<CustomField>
    <fullName>Session_Series_Create_Event__c</fullName>
    <description>Currently not evaluated on Update, only Insert.</description>
    <formula>if(Session_Series__r.Create_Event__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Yes when the client session is first created, creates a related Salesforce Event.</inlineHelpText>
    <label>Create Event</label>
    <type>Text</type>
</CustomField>