force-app/main/default/objects/Client_Session__c/fields/Supervisor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Contact__c</fullName>
    <formula>if( isblank(Supervisor_Name__c), &quot;&quot;, 

&quot;Work Phone: &quot; &amp; Supervisor_Name__r.npe01__WorkPhone__c &amp; br() &amp;
&quot;Work Email: &quot; &amp;  Supervisor_Name__r.npe01__WorkEmail__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor Contact</label>
    <type>Text</type>
</CustomField>