force-app/main/default/objects/Client_Session__c/fields/Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Entries</relationshipLabel>
    <relationshipName>Service_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>