force-app/main/default/objects/Client_Session__c/fields/Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Due_Date__c</fullName>
    <description>DEMO: follow up task</description>
    <label>Task Due Date</label>
    <type>Date</type>
</CustomField>