force-app/main/default/objects/Client_Session__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>CASE(
    ECM_Service_Activity__r.Name,
    &quot;Referral&quot;, text(Outbound_Referral__r.Referral_Type__c),
    
    &quot;Conviction History&quot;, TEXT(Conviction_Type__c),
    
    &quot;IDS Visit&quot;, 
    IF(
        New_Hire_Orientation__c, 
        &quot;New Hire - &quot; &amp; TEXT(Visit_Type__c), 
        TEXT(Visit_Type__c)
    ),
    
    &quot;Progress Note Only&quot;, TEXT(Progress_Note_Type__c),
    
    &quot;Student Absence&quot;, &quot;Incident / Observation&quot;,
    &quot;COAT&quot;, &quot;Incident / Observation&quot;,
    &quot;Program Hold&quot;, &quot;Incident / Observation&quot;,
    &quot;Send Out Hold&quot;, &quot;Incident / Observation&quot;,
    &quot;Write-Up&quot;, &quot;Incident / Observation&quot;,
    
    &quot;Hold/Concern&quot;,
    IF(
        CONTAINS(Progress_Note_Short__c, &quot;90 Day Review&quot;), 
        &quot;90 Day Review&quot;, 
        &quot;Incident / Observation&quot;
    ),

    
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>