force-app/main/default/objects/Client_Session__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <inlineHelpText>If only New Hire Orientation, leave this blank</inlineHelpText>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action Plan</fullName>
            </value>
            <value>
                <fullName>Non-Action Plan</fullName>
            </value>
            <value>
                <fullName>Supervisor Visit</fullName>
            </value>
            <value>
                <fullName>Advancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>