force-app/main/default/objects/Client_Session__c/recordTypes/Behavioral_Based_CAM_Interview.recordType-meta.xml
<RecordType>
    <fullName>Behavioral_Based_CAM_Interview</fullName>
    <active>true</active>
    <label>Behavioral Based CAM Interview</label>
</RecordType>