force-app/main/default/objects/Client_Session__c/recordTypes/ExpDefault.recordType-meta.xml
<RecordType>
    <fullName>ExpDefault</fullName>
    <active>true</active>
    <description>ECM Default record type.</description>
    <label>Default</label>
</RecordType>