force-app/main/default/objects/Client_Session__c/recordTypes/General_Client_Session.recordType-meta.xml
<RecordType>
    <fullName>General_Client_Session</fullName>
    <active>true</active>
    <description>General purpose client session record type.</description>
    <label>General Client Session</label>
</RecordType>