force-app/main/default/objects/Client_Session__c/recordTypes/Progress_Note_Only.recordType-meta.xml
<RecordType>
    <fullName>Progress_Note_Only</fullName>
    <active>true</active>
    <label>Progress Note Only</label>
</RecordType>