force-app/main/default/objects/Client_Session__c/recordTypes/Send_Out_Sales_Pitch.recordType-meta.xml
<RecordType>
    <fullName>Send_Out_Sales_Pitch</fullName>
    <active>true</active>
    <label>Send Out Sales Pitch</label>
</RecordType>