force-app/main/default/objects/Client_Session__c/listViews/My_Service_Entries.listView-meta.xml
<ListView>
    <fullName>My_Service_Entries</fullName>
    <columns>NAME</columns>
    <columns>Case_Record__c</columns>
    <columns>Type__c</columns>
    <columns>Progress_Note_Type__c</columns>
    <columns>Progress_Note__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_YEAR</value>
    </filters>
    <filters>
        <field>Service_Entry_Name__c</field>
        <operation>equals</operation>
        <value>Recruitment Interview</value>
    </filters>
    <filters>
        <field>Created_by_Summary__c</field>
        <operation>contains</operation>
        <value>-</value>
    </filters>
    <label>My Service Entries</label>
</ListView>